--- a/language-ecmascript.cabal
+++ b/language-ecmascript.cabal
@@ -38,7 +38,7 @@ Library
     base >= 4 && < 5,
     mtl >= 1 && < 3,
     parsec > 3 && < 3.2.0,
-    wl-pprint >= 1.2 && < 2,
+    wl-pprint >= 1.1 && < 2,
     containers == 0.*,
     uniplate >= 1.6 && <1.7,
     data-default-class >= 0.0.1 && < 0.1,
@@ -81,8 +81,8 @@ Test-Suite test
     base >= 4 && < 5,
     mtl >= 1 && < 3,
     parsec >= 3 && < 3.2.0,
-    wl-pprint >= 1.2 && < 2,
-    containers == 0.*,
+    wl-pprint,
+    containers,
     directory >= 1.2 && < 1.3,
     filepath >= 1.3 && < 1.5,
     HUnit >= 1.2 && < 1.3,
