--- a/language-ecmascript.cabal
+++ b/language-ecmascript.cabal
@@ -35,33 +35,33 @@ Source-repository this
 Library
   Hs-Source-Dirs:
     src
-  Build-Depends:
-    base >= 4 && < 5,
-    mtl >= 1.1.0.1,
-    parsec >= 3.0 && < 3.2,
-    wl-pprint >= 1.1,
-    containers >= 0.1,
-    uniplate >= 1.6 && <1.7,
-    data-default-class >= 0.0.1 && < 0.1,
-    data-default-instances-base >= 0.0.1 && < 0.1,
-    QuickCheck >= 2.5 && < 2.9,
-    template-haskell,
-    Diff == 0.3.*
+  Build-Depends: base >= 4 && < 5,
+                 mtl >= 1.1.0.1,
+                 parsec >= 3.0 && < 3.2,
+                 wl-pprint >= 1.1,
+                 containers >= 0.1,
+                 uniplate >= 1.6 && <1.7,
+                 data-default-class >= 0.0.1 && < 0.1,
+                 data-default-instances-base >= 0.0.1 && < 0.1,
+                 QuickCheck >= 2.5 && < 2.9,
+                 template-haskell,
+                 testing-feat >= 0.4.0.2 && < 0.5,
+                 Diff == 0.3.*
   ghc-options:
     -fwarn-incomplete-patterns
-  Exposed-Modules:
-    Language.ECMAScript5
-    Language.ECMAScript5.Syntax
-    Language.ECMAScript5.Syntax.Arbitrary
-    Language.ECMAScript5.Syntax.QuasiQuote
-    Language.ECMAScript5.Parser
-    Language.ECMAScript5.PrettyPrint
-    Language.ECMAScript5.Syntax.Annotations
-    Language.ECMAScript5.Lexer
-    Language.ECMAScript5.ParserState
-    Language.ECMAScript5.Parser.Unicode
-    Language.ECMAScript5.Parser.Util
-    Language.ECMAScript5.SourceDiff
+  Exposed-Modules: Language.ECMAScript5
+                   Language.ECMAScript5.Syntax
+                   Language.ECMAScript5.Syntax.Arbitrary
+                   Language.ECMAScript5.Syntax.CodeGen
+                   Language.ECMAScript5.Syntax.QuasiQuote
+                   Language.ECMAScript5.Parser
+                   Language.ECMAScript5.PrettyPrint
+                   Language.ECMAScript5.Syntax.Annotations
+                   Language.ECMAScript5.Lexer
+                   Language.ECMAScript5.ParserState
+                   Language.ECMAScript5.Parser.Unicode
+                   Language.ECMAScript5.Parser.Util
+                   Language.ECMAScript5.SourceDiff
   Default-Extensions:
     DeriveDataTypeable, ScopedTypeVariables, DeriveFunctor, DeriveFoldable, DeriveTraversable, FlexibleContexts
   Default-Language: Haskell2010
