--- a/language-ecmascript.cabal
+++ b/language-ecmascript.cabal
@@ -75,6 +75,7 @@ Test-Suite test
     Test.Pretty
     Test.StatementTests
     Test.ExpressionTests
+    Test.Reference
   Build-Depends:
     base >= 4 && < 5,
     mtl >= 1.1.0.1,
@@ -86,8 +87,13 @@ Test-Suite test
     tasty == 0.10.*, 
     tasty-hunit == 0.9.*,
     tasty-quickcheck == 0.8.*,
+    tasty-golden == 2.3.*,
     data-default-class >= 0.0.1 && < 0.1,
     Diff == 0.3.*,
+    mozilla-js-parser-api,
+    transformers,
+    aeson,
+    bytestring,
     language-ecmascript
   Default-Extensions: DeriveDataTypeable, ScopedTypeVariables, DeriveFunctor, DeriveFoldable, DeriveTraversable, FlexibleContexts
   Default-Language: Haskell2010
