--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,7 @@ resolver: lts-3.16
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- '../mozilla-js-parser-api'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: []
