Pretty-printing annotations. Partially addresses #13.

--- a/language-ecmascript.cabal
+++ b/language-ecmascript.cabal
@@ -38,7 +38,7 @@ Library
   Build-Depends: base >= 4 && < 5,
                  mtl >= 1.1.0.1,
                  parsec >= 3.0 && < 3.2,
-                 wl-pprint >= 1.1,
+                 annotated-wl-pprint >= 0.7 && < 1.0,
                  containers >= 0.1,
                  uniplate >= 1.6 && <1.7,
                  data-default-class >= 0.0.1 && < 0.1,
@@ -80,11 +80,11 @@ Test-Suite test
     base >= 4 && < 5,
     mtl >= 1.1.0.1,
     parsec < 3.2.0,
-    wl-pprint >= 1.1,
+    annotated-wl-pprint >= 0.7 && < 1.0,
     containers >= 0.1 && < 0.6,
     directory,
     filepath,
-    tasty == 0.10.*, 
+    tasty == 0.11.*, 
     tasty-hunit == 0.9.*,
     tasty-quickcheck == 0.8.*,
     tasty-golden == 2.3.*,
