--- a/language-ecmascript.cabal
+++ b/language-ecmascript.cabal
@@ -1,8 +1,9 @@
 Name:           language-ecmascript
-Version:        1.0
+Version:        5.0.0
 Cabal-Version:	>= 1.10
 Copyright:      (c) 2007-2012 Brown University, (c) 2008-2010 Claudiu Saftoiu,
-                (c) 2012-2015 Stevens Institute of Technology
+                (c) 2012-2015 Stevens Institute of Technology,
+                (c) 2016 Andrey Chudnov
 License:        BSD3
 License-file:   LICENSE
 Author:         Andrey Chudnov, Arjun Guha, Spiridon Aristides Eliopoulos,
@@ -11,7 +12,7 @@ Maintainer:     Andrey Chudnov <oss@chudnov.com>
 Homepage:       http://github.com/jswebtools/language-ecmascript
 Bug-reports:    http://github.com/jswebtools/language-ecmascript/issues
 Stability:      experimental
-Tested-with:    GHC==7.6.3
+Tested-with:    GHC==7.4.2, GHC==7.6.3, GHC==7.8.3, GHC==7.10.3
 Extra-Source-Files: test-data/diff/left/*.js, test-data/diff/right/*.js, test-data/diff/expects/*.diff, test-data/*.js, CHANGELOG
 Category:       Language
 Build-Type:     Simple
@@ -30,7 +31,7 @@ Source-repository head
 Source-repository this
    type: git
    location: git://github.com/jswebtools/language-ecmascript.git
-   tag: 1.0
+   tag: 5.0.0
 
 Library
   Hs-Source-Dirs:
