--- a/.travis.yml
+++ b/.travis.yml
@@ -108,6 +108,7 @@ install:
     cabal)
       cabal --version
       travis_retry cabal update
+      cabal install happy
       cabal install --only-dependencies --enable-tests --enable-benchmarks --force-reinstalls --ghc-options=-O0 --reorder-goals --max-backjumps=-1 $CABALARGS
       ;;
   esac
