--- a/language-ecmascript.cabal
+++ b/language-ecmascript.cabal
@@ -84,7 +84,7 @@ Test-Suite test
     parsec < 3.2.0,
     annotated-wl-pprint >= 0.7 && < 1.0,
     containers >= 0.1 && < 0.6,
-    directory,
+    directory >= 1.2.5,
     filepath,
     tasty == 0.11.*, 
     tasty-hunit == 0.9.*,
